# machine_transaction_bot

./: .env  Cargo.toml  README.md
binance_bot/: Cargo.toml
binance_bot/src/: main.rs
database/: Cargo.toml
database/src/: lib.rs
indicator_bot/: Cargo.toml
indicator_bot/src/: main.rs
machine_bot/: Cargo.toml
machine_bot/src/: main.rs
meme_bot/: Cargo.toml
meme_bot/src/: config.rs  error.rs  lib.rs  main.rs  types.rs
meme_bot/src/bot/: bot.rs  mod.rs
meme_bot/src/cex/: mod.rs  traits.rs
meme_bot/src/dex/: mod.rs  traits.rs
meme_bot/src/dex/solana/: mod.rs  raydium.rs
meme_bot/src/models/: mod.rs  pool.rs  state.rs
quantification_bot/: Cargo.toml
quantification_bot/src/: fetch_data.rs  kline_4h.rs  main.rs  strategy.rs
quantification_bot/src/strategy/: backtest_result.rs  mod.rs  trading_strategy.rs
rust_binance_bot/: Cargo.toml
