[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
sqlx = { version = "0.8.1",features = ["runtime-tokio-native-tls", "mysql","macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"
sqlx-cli = "0.8.1"
[lib]