[package]
name = "Quantification_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
database = {path = "../database"}
dotenvy = "0.15.6"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
chrono = "0.4.38"